[gd_scene load_steps=10 format=2]

[ext_resource path="res://DummyTest/PlsTTS.gd" type="Script" id=1]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-R.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://modules/Reusables/SuperLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/MavrickleIcon.png" type="Texture" id=4]
[ext_resource path="res://fonts/Built/Ubuntu_R_48tred.tres" type="DynamicFont" id=5]
[ext_resource path="res://GameDVDCardtridge/HexagonEngine-v3/SpareParts/UI/UIelements/MenuButton.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
resource_name = "SuperLabel"
size = 72
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
resource_name = "SuperLabel"
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="PlsTTS" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowOff" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopText" parent="HBoxContainer/ShowOff" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 958.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "Utu Ano"
align = 1
size = 72.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ShowOff"]
margin_top = 94.0
margin_right = 958.0
margin_bottom = 986.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="BottomText" parent="HBoxContainer/ShowOff" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 990.0
margin_right = 958.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 1 )
text = "I ved Gro"
align = 1
size = 72.0

[node name="Controlings" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" parent="HBoxContainer/Controlings" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 958.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
text = "Please Text to Speech Now!"
align = 1
size = 48.0

[node name="Dropdowns" type="HBoxContainer" parent="HBoxContainer/Controlings"]
margin_top = 67.0
margin_right = 958.0
margin_bottom = 103.0
alignment = 1

[node name="ChooseEngine" type="OptionButton" parent="HBoxContainer/Controlings/Dropdowns"]
margin_right = 400.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "godot-tts"
items = [ "godot-tts", null, false, 0, null, "flite (terminal)", null, false, 1, null ]
selected = 0

[node name="LabelThatChooseVoice" parent="HBoxContainer/Controlings/Dropdowns" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 404.0
margin_right = 554.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Voice Name: "

[node name="ChooseVoice" type="LineEdit" parent="HBoxContainer/Controlings/Dropdowns"]
margin_left = 558.0
margin_right = 958.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "rms"
placeholder_text = "Choose Voice Name"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/Controlings"]
margin_top = 107.0
margin_right = 958.0
margin_bottom = 826.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Hello World"
show_line_numbers = true

[node name="SpeakNow" parent="HBoxContainer/Controlings" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 830.0
margin_right = 958.0
margin_bottom = 1080.0
rect_min_size = Vector2( 10, 250 )
size_flags_vertical = 1
MenuName = "Speak"
ChooseOrientation = 2
minHoriSize = 10.0

[connection signal="item_selected" from="HBoxContainer/Controlings/Dropdowns/ChooseEngine" to="." method="_on_ChooseEngine_item_selected"]
[connection signal="text_changed" from="HBoxContainer/Controlings/Dropdowns/ChooseVoice" to="." method="_on_ChooseVoice_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Controlings/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/Controlings/SpeakNow" to="." method="_on_SpeakNow_pressed"]
